Adjust post directory to be plural

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -32,7 +32,7 @@ enableGitInfo = true
     weight = 1
   [[menu.nav]]
     name = "Blog"
-    url = "/post/"
+    url = "/posts/"
     weight = 2
   [[menu.nav]]
     name = "Tags"
