--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
 [build.environment]
   HUGO_VERSION = "0.58.3"
   HUGO_THEME = "repo"
-  HUGO_BASEURL = "https://cupper-hugo-theme.netlify.com/"
+  HUGO_BASEURL = "https://hugo-cup-theme.netlify.com/"
